@@ -1,11 +1,10 @@
-SUBDIRS=images docs
+SUBDIRS=images
 
 urlpath = /gdm/
 
 page_SCRIPTS= index.html	\
 		about.html	\
 		developers.html \
-		docs.html	\
 		gdm.css
 
 include $(top_srcdir)/rules.common
