@@ -1,91 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-<head>
-    <title>GDM - GNOME Display Manager</title>
-    <link rel="stylesheet" type="text/css" href="http://www.gnome.org/default.css" />
-    <link rel="stylesheet" type="text/css" href="gdm.css" />
-    <link rel="icon" type="image/png" href="images/favicon.png" />
-</head>
-
-<body>
-
-<div id="hdr">
-    <a href="http://www.gnome.org/"><img id="logo" src="http://gnome.org/img/logo/text-64" alt="Gnome" /></a>
-    <div id="hdrNav">
-    <a href="index.html"><b>Home</b></a> &middot;
-    <a href="docs.html">Documentation</a> &middot;
-    <a href="developers.html">Developers</a> &middot;
-    <a href="about.html">About</a> &middot;
-    <a href="http://live.gnome.org/GDM">Wiki</a>
-    </div>
-</div>
-
-
-<div id="body">
-
-<h2>GDM - The GNOME Display Manager Documentation</h2>
-
-<p>
-Stable release documentation.
-</p>
-
-<p>
-Note that GDM 2.24 and later is a complete rewrite of GDM, and supports
-different configuration features.
-</p>
-
-<ul>
-<li><a href="docs/2.24/gdm.html">2.24 documentation</a></li>
-<li><a href="docs/2.20/gdm.html">2.20 documentation</a></li>
-<li><a href="docs/2.18/gdm.html">2.18 documentation</a></li>
-<li><a href="docs/2.16/gdm.html">2.16 documentation</a></li>
-<li><a href="docs/2.14/gdm.html">2.14 documentation</a></li>
-<li><a href="docs/2.8/gdm.html">2.8 documentation</a></li>
-</ul>
-
-<p>
-Additional Documentation:
-</p>
-
-<p>
-<ul>
-<li><a href="docs/gdmtalk.pdf">Paper "Using and Managing GDM" (pdf)</a></ul>
-</ul>
-</p>
-
-<p>
-If using GDM 2.20 or earlier, then you can find additional GDM themes at
-<a href="http://art.gnome.org/themes/gdm_greeter/">http://art.gnome.org/</a>.
-</p>
-
-</div>
-
-<div id="sidebar">
-
-    <p class="section">Downloads</p>
-    <p>GDM should come bundled with your distribution.</p>
-    <p>The latest releases can always be found at the
-       <a href="http://ftp.gnome.org/pub/GNOME/sources/gdm">GNOME ftp site</a>.</p>
-    <p>The latest stable<br /> release is
-       <a href="http://ftp.gnome.org/pub/gnome/sources/gdm/2.24">2.24.x</a>.</p>
-    <p>The latest unstable<br /> release is
-       <a href="http://ftp.gnome.org/pub/gnome/sources/gdm/2.25">2.25.x</a>.</p> 
-    <br />
-
-    <p class="section">Feedback</p>
-    <p>Bugs should be reported to the
-       <a href="http://bugzilla.gnome.org">GNOME Bug Tracking System</a>.</p>
-    <p>You can get in touch with developers and other users by
-       <a href="mailto:gdm-list@gnome.org">sending a mail</a> to the GDM
-       <a href="http://mail.gnome.org/mailman/listinfo/gdm-list">mailing list</a>
-       [<a href="http://mail.gnome.org/archives/gdm-list/">Archives</a>].</p>
-    <br />
-</div>
-
-<div id="copyright">
-    Copyright &copy; 2005, <a href="http://www.gnome.org/">The GNOME Project</a><br />
-</div>
-
-</body>
-</html>
