@@ -1,6 +1,8 @@
 2008-12-10  Brian Cameron  <brian.cameron@sun.com>
 
-	* configure.in, www.gnome.org/projects/gdm/docs: Remove docs.
+	* configure.in, www.gnome.org/projects/gdm/docs.html
+	  www.gnome.org/projects/gdm/Makefile.am,
+	  www.gnome.org/projects/gdm/docs: Remove docs.
 	* www.gnome.org/projects/gdm/*.html: Now point to docs at
 	  http://library.gnome.org/admin/gdm/.
 
